k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: imapex-web
  namespace: hapresto
  labels:
    app: imapex
    tier: web
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: imapex
    tier: web
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: imapex-web
  namespace: hapresto
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: imapex
        tier: web
    spec:
      containers:
      - name: imapex-web
        image: imapex/web:latest
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 48M
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: imapex-ingress
  namespace: hapresto
  annotations:
    kubernetes.io/ingress.class: "gce"
    dns.alpha.kubernetes.io/external: "true"
spec:
  rules:
  - host: imapex.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: imapex-web
          servicePort: 80
  - host: www.imapex.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: imapex-web
          servicePort: 80
